2000-05-26 Mark Elbrecht <snowball3@bigfoot.com>

	Currently, AC_PROG_LN_S incorrectly reports yes with DJGPP. This
	is because the DJGPP `ln' emulates soft links for executables by
	generating a stub that in turn calls the real program.  This
	feature also works with nonexistent files like in the Unix
	spec. So `ln -s X conftestdata' will generate `conftestdata.exe'
	which will attempt to call 'X.exe'. But this feature only works
	for executables.  Fix it.

	* acspecific.m4 (AC_PROG_LN_S): Create a sample file and use it to
	test `ln -s'.

2000-05-26  Ossama Othman <ossama@ece.uci.edu>

	* aclang.m4 (AC_PROG_CXX): Look for aCC before CC.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_STRERROR_R): New, from `strerror_r.m4',
	serial 2, by Jim Meyering.
	(AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK): New, from
	`lstat-slash.m4', serial 1, by Jim Meyering.
	* acfunctions: Adjust.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOLS): Don't require
	AC_CHECK_TOOL_PREFIX, it's dead.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Simplify all the
	case "$switch" in
	into
	case $switch in
	* acspecific.m4: Likewise.
	* aclang.m4: Likewise.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOL_PREFIX): Remove.
	Adjust dependencies.
	(_AC_INIT_PARSE_ARGS): Set ac_tool_prefix.

2000-05-26  Akim Demaille  <akim@epita.fr>

	In `info', it is easier to type `autoconf <TAB>' to reach the list
	of options, that `Invoking autoc<TAB>'.

	* doc/autoconf.texi: s/Invoking foo/foo Invocation/.

2000-05-26  Akim Demaille  <akim@epita.fr>

	Merge `Upgrading' and `Obsolete Constructs' together.

	* doc/autoconf.texi (Obsolete Constructs): Move right after
	`Recreation a Configuration.
	(Invoking autoupdate): Be a subsection of
	`Obsolete Constructs'.
	(Upgrading): Demote from chapter to section.
	Be a section of `Obsolete Constructs'.
	Rename as `Autoconf 1'.

2000-05-26  Akim Demaille  <akim@epita.fr>
